# pr-news

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SOLUTION_COMPLETE.md  config.json  config.yaml  end_to_end.py  pr_analysis_results.json  pyproject.toml  review_prs.py  test_fetch.py  test_larger_pr.py  test_multiple_prs.py  test_single_pr.py
pr_filter/: __init__.py  claude_runner.py  config.py  critique.py  data_structs.py  diff_reducer.py  filter.py  generator.py  models.py  output.py  prompts.py  review_parser.py
skills/: pr_critique.md
tests/: test_critique.py  test_diff_reducer.py  test_filter.py  test_generator.py  test_integration.py  test_schema_prompt_alignment.py  test_schemas.py
